@@ -14,6 +14,9 @@ behavior, then change option "time_length" to 97200.
 
 Plots shorter than 24 hours are now possible. Thanks to user Andrew Tridgell.
 
+If one of the sections SummaryByMonth, SummaryByYear, or ToDate is missing,
+the report engine no longer crashes.
+
 
 2.3.1 04/15/13
 
